# tick-collector-v5

./: CLIENT_API_GUIDE.md  Cargo.toml
web/: Cargo.toml
web/data/: admin.json  api_key.txt  config.json
web/data/footprint/: binance_BTCUSDT.json
web/data/trades/: binance_ADAUSDT.json  binance_AVAXUSDT.json  binance_BNBUSDT.json  binance_DOGEUSDT.json  binance_DOTUSDT.json  binance_SOLUSDT.json  binance_XRPUSDT.json  bybit_ADAUSDT.json  bybit_AVAXUSDT.json  bybit_BNBUSDT.json  bybit_DOTUSDT.json  okx_AVAXUSDT.json  okx_DOGEUSDT.json
web/deploy/: 1-provision-vm.sh  2-deploy-app.sh  3-setup-service.sh  DEPLOYMENT.md  README.md  install.sh  tick-collector.service
web/src/: api.rs  db.rs  exchange.rs  main.rs  state.rs  websocket.rs
web/static/: app.js  health.html  index.html  style.css
web/target_new/: .rustc_info.json
web/target_new/release/: tick-collector-web.d
web/target_new/release/.fingerprint/actix-codec-1fb9f9fab14fb0b7/: lib-actix_codec  lib-actix_codec.json
web/target_new/release/.fingerprint/actix-files-abab69e92e2ab2f4/: lib-actix_files
web/target_new/release/.fingerprint/actix-macros-32dd073a8298e817/: lib-actix_macros  lib-actix_macros.json
web/target_new/release/.fingerprint/actix-router-f4c011928f20e13e/: lib-actix_router.json
web/target_new/release/.fingerprint/actix-rt-d2a4d9af9349bfa5/: lib-actix_rt
web/target_new/release/.fingerprint/actix-server-3aadaed394c228b8/: lib-actix_server
web/target_new/release/.fingerprint/actix-utils-46dc42905b491764/: lib-actix_utils
(+309 files in other folders)
