[package]
name = "tick-collector-web"
version = "0.1.0"
description = "Web dashboard for Tick Collector - runs on GCP Free Tier f1-micro"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "tick-collector-web"
path = "src/main.rs"

[dependencies]
# Web framework (lightweight, ~5MB RAM)
actix-web = "4"
actix-files = "0.6"
actix-ws = "0.3"

# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
futures = "0.3"

# WebSocket & HTTP clients (for exchange connections)
fastwebsockets = { version = "0.9.0", default-features = false, features = ["upgrade"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bytes = "1.8"
http-body-util = "0.1"
hyper = { version = "1", default-features = false, features = ["http1", "client"] }
hyper-util = { version = "0.1", default-features = false }
tokio-rustls = "0.24"
webpki-roots = "0.23"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["serde", "now", "clock"] }

# SQLite database (lightweight, ~5MB RAM)
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
log = "0.4"
fern = "0.7"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
rustc-hash = "2.1"
parking_lot = "0.12"
once_cell = "1.19"
